# APKKiller

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
.github/workflows/: build.yml
app/: .gitignore  build.gradle
app/src/: .gitignore
app/src/androidTest/java/com/kuro/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: APKKiller.h  BinaryReader.cpp  BinaryReader.h  CMakeLists.txt  ElfImg.cpp  ElfImg.h  Utils.cpp  Utils.h  main.cpp  stdafx.h
app/src/main/cpp/whale/: CMakeLists.txt
app/src/main/cpp/whale/include/: whale.h
app/src/main/cpp/whale/src/android/: native_bridge.h
app/src/main/cpp/whale/src/android/art/: art_jni_trampoline.cc  art_runtime.cc  art_runtime.h  java_types.cc  modifiers.h  native_on_load.cc  native_on_load.h
app/src/main/cpp/whale/src/platform/linux/: elf_image.cc  process_map.cc
app/src/main/java/com/kuro/: APKKiller.java  MainActivity.java  MainApplication.java
app/src/main/java/com/kuro/app/: MainActivity.java  MainApplication.java
app/src/main/java/com/kuro/whale/: VMHelper.java  WhaleRuntime.java
app/src/main/java/com/kuro/whale/xposed/: ClassUtils.java  MemberUtils.java  XC_MethodHook.java  XC_MethodReplacement.java  XposedBridge.java  XposedHelpers.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kuro/: ExampleUnitTest.java
docs/: README.md
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
